@@ -17,10 +17,8 @@
 package io.fusionauth.jwt.ed;
 
 import io.fusionauth.jwt.BaseJWTTest;
-import io.fusionauth.jwt.Signer;
 import io.fusionauth.jwt.Verifier;
 import io.fusionauth.jwt.domain.Algorithm;
-import io.fusionauth.jwt.domain.JWT;
 import io.fusionauth.pem.domain.PEM;
 import org.testng.annotations.Test;
 
@@ -31,7 +29,6 @@ import java.util.List;
 
 import static org.testng.Assert.assertEquals;
 import static org.testng.Assert.assertNotNull;
-import static org.testng.Assert.assertNull;
 import static org.testng.Assert.assertTrue;
 
 /**
@@ -54,12 +51,14 @@ public class EdDSAVerifierTest extends BaseJWTTest {
 
   @Test
   public void decodePrivateKey() throws Exception {
-    List<String> privateKeys = Arrays.asList(
-        "ed_dsa_ed25519_private_key.pem",
+    List<String> privateKeys = List.of(
         "ed_dsa_ed448_private_key.pem",
-        "ed_dsa_private_key.pem");
+        "eddsa_ed448_private_key.pem",
+        "ed_dsa_ed25519_private_key.pem",
+        "ed_dsa_private_key.pem"
+    );
 
-    // These keys do not contain a public key
+    // These keys do not contain a public key. However, the public key can be produced from the private key for EdDSA.
     for (String f : privateKeys) {
       String message = "For file [" + f + "]";
       String encodedPEM = new String(Files.readAllBytes(Paths.get("src/test/resources/" + f)));
@@ -68,7 +67,10 @@ public class EdDSAVerifierTest extends BaseJWTTest {
       PEM pem = PEM.decode(encodedPEM);
       assertNotNull(pem.privateKey, message);
       assertEquals(pem.privateKey.getFormat(), "PKCS#8", message);
-      assertNull(pem.publicKey, message);
+      assertNotNull(pem.publicKey, message);
+      assertEquals(pem.publicKey.getFormat(), "X.509", message);
+      String expectedAlgorithm = fipsEnabled ? (f.contains("ed448") ? "Ed448" : "Ed25519") : "EdDSA";
+      assertEquals(pem.publicKey.getAlgorithm(), expectedAlgorithm, message);
     }
 
     // Private keys that contain a public key
@@ -82,6 +84,8 @@ public class EdDSAVerifierTest extends BaseJWTTest {
       assertEquals(pem.privateKey.getFormat(), "PKCS#8", message);
       assertNotNull(pem.publicKey, message);
       assertEquals(pem.publicKey.getFormat(), "X.509", message);
+      String expectedAlgorithm = fipsEnabled ? "Ed25519" : "EdDSA";
+      assertEquals(pem.publicKey.getAlgorithm(), expectedAlgorithm, message);
     }
   }
 
@@ -102,21 +106,5 @@ public class EdDSAVerifierTest extends BaseJWTTest {
       assertNotNull(pem.publicKey, message);
       assertEquals(pem.publicKey.getFormat(), "X.509", message);
     }
-  }
-
-  @Test
-  public void signAndVerify() throws Exception {
-    JWT jwt = new JWT().setSubject("1234567890");
-
-    // Sign the JWT
-    Signer signer = EdDSASigner.newSigner(new String(Files.readAllBytes(Paths.get("src/test/resources/ed_dsa_private_key.pem"))));
-    String encodedJWT = JWT.getEncoder().encode(jwt, signer);
-
-    // Verify the JWT
-    Verifier verifier = EdDSAVerifier.newVerifier(Paths.get("src/test/resources/ed_dsa_public_key.pem"));
-    JWT actual = JWT.getDecoder().decode(encodedJWT, verifier);
-
-    assertEquals(actual.subject, jwt.subject);
-    assertEquals(actual.header.algorithm.name(), "EdDSA");
   }
 }
